# global-variables

./: .ghci  LICENSE  global-variables.cabal  glovar.cabal  runtests.sh
examples/multimodule/: Main.hs  Module1.hs  Module2.hs
src/Data/: Global.hs
src/Data/Global/: IORef.hs  Internal.hs  Registry.hs  TVar.hs
src/Data/Global/IORef/: Internal.hs
test/: testsuite.cabal
test-src/: TestMain.hs
test-src/Data/Global/: Test.hs
test-src/Data/Global/IORef/: Test.hs
test-src/Data/Global/Internal/: Test.hs
test-src/Data/Global/Registry/: Test.hs
test-src/Data/Global/TVar/: Test.hs
test/src/Data/Global/Registry/: Test.hs
