Name:                global-variables
Version:             1.0

Synopsis:            Declaratively named, global, and top-level mutable 
                     variables without unsafePerformIO.

Description:         some desc

License:             BSD3
License-file:        LICENSE
Author:              Jean-Marie Gaillourdet and Patrick Michel
Maintainer:          Jean-Marie Gaillourdet <jmg@gaillourdet.net>          
Copyright:           2011 Jean-Marie Gaillourdet           

Category:            Data, Reflection

Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

Cabal-version:       >=1.2

Flag test
  Description:       enable the test suite
  Default:           False

Library
  Exposed-modules:     Data.Global
                     , Data.Global.IORef
  Hs-Source-Dirs:    src
  
  Build-depends:       base >= 4 && 
                     , containers >= 0.3 && < 0.5
  
  Other-modules:     Data.Global.Registry

  Ghc-Options:       -threaded -Wall
  
Executable           runtests
  if flag(test)
    Buildable:       True
  else
    Buildable:       False
  Main-Is:           TestMain.hs
  Hs-Source-Dirs:    src, test-src
  Build-depends:       base >= 4
                     , containers >= 0.3 && < 0.5
                     , QuickCheck == 2.4.*
                     , test-framework == 0.4.*
                     , test-framework-quickcheck2 == 0.2.*
  Ghc-Options:       -threaded -Wall
  if impl(ghc >= 7.0)
    Ghc-Options:     -rtsopts

