-- The name of the package.
Name:                glovar

Version:             0.1

Synopsis:            Named global top-level mutable variables without unsafePerformIO 

-- A longer description of the package.
-- Description:         

-- The license under which the package is released.
License:             BSD3

-- The file containing the license text.
License-file:        LICENSE

-- The package author(s).
Author:              Jean-Marie Gaillourdet and Patrick Michel

-- An email address to which users can send suggestions, bug reports,
-- and patches.
-- Maintainer:          

-- A copyright notice.
-- Copyright:           

Category:            System

Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2

Flag test
  Description:       enable the test suite
  Default:           False

Library
  Exposed-modules:     Data.Global
                     , Data.Global.IORef
  Hs-Source-Dirs:    src
  
  Build-depends:       base >= 4 && 
                     , containers >= 0.3 && < 0.5
  
  Other-modules:     Data.Global.Registry

  Ghc-Options:       -threaded -Wall
  
Executable           runtests
  if flag(test)
    Buildable:       True
  else
    Buildable:       False
  Main-Is:           TestMain.hs
  Hs-Source-Dirs:    src, test-src
  Build-depends:       base >= 4
                     , containers >= 0.3 && < 0.5
                     , QuickCheck == 2.4.*
                     , test-framework == 0.4.*
                     , test-framework-quickcheck2 == 0.2.*
  Ghc-Options:       -threaded -Wall
  if impl(ghc >= 7.0)
    Ghc-Options:     -rtsopts

