Name:               test-suite
Version:            1.0

Synopsis:           Namespaced, global, and top-level mutable variables without
                    unsafePerformIO.

Description:        The test suite to global-variables

License:            BSD3
License-file:       ../LICENSE
Author:             Jean-Marie Gaillourdet
Maintainer:         Jean-Marie Gaillourdet <jmg@gaillourdet.net>
Copyright:          2011 Jean-Marie Gaillourdet


Build-type:         Simple

Cabal-version:      >=1.6

Executable          runtests
  Main-Is:          TestMain.hs
  Hs-Source-Dirs:   src, ../src
  Build-depends:      base >= 4 && < 5
                    , containers >= 0.3 && < 0.5
                    , stm >= 2.1 && < 2.2
                    , QuickCheck >= 2.4 && < 2.5
                    , test-framework >= 0.4 && < 0.5
                    , test-framework-quickcheck2 >= 0.2 && < 0.3
  Ghc-Options:      -threaded -Wall
  if impl(ghc >= 7.0)
    Ghc-Options:    -rtsopts

Source-Repository   head
  Type:             mercurial
  Location:         http://bitbucket.org/jmg/global-variables
